# ditorender

./: CMakeLists.txt  README.md  main.cpp
src/demo/: draw_projectile.cpp  draw_sphere.cpp  draw_sphere_silhouette.cpp  hand_faces.cpp  shoot_projectile.cpp
src/drawing/: camera.cpp  camera.hpp  camera_test.cpp  canvas.cpp  canvas.hpp  canvas_test.cpp
src/physics/: computations.cpp  computations.hpp  intersection.cpp  intersection.hpp  intersections.cpp  intersections.hpp  material.cpp  material.hpp  material_test.cpp  point_light.cpp  point_light.hpp  point_light_test.cpp  ray.cpp  ray.hpp  ray_test.cpp  world.cpp  world.hpp  world_test.cpp
src/sim/: environment.cpp  environment.hpp  projectile.cpp  projectile.hpp
src/util/: color.cpp  color.hpp  color_test.cpp  matrix.cpp  matrix.hpp  matrix_test.cpp  point.cpp  point.hpp  sphere.cpp  sphere.hpp  sphere_test.cpp  tuple.cpp  tuple.hpp  tuple_test.cpp  vector.cpp  vector.hpp  vector_test.cpp
