cmake_minimum_required(VERSION 3.0.0)
project(ditorender VERSION 0.1.0)

include(CTest)
enable_testing()

set (CMAKE_CXX_STANDARD 17)

add_executable(
  ditorender 
  main.cpp 
  src/util/tuple.cpp 
  src/util/color.cpp
  src/util/point.cpp
  src/util/vector.cpp
  src/drawing/canvas.cpp
)

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)

include(FetchContent)
FetchContent_Declare(
  googletest
  URL https://github.com/google/googletest/archive/609281088cfefc76f9d0ce82e1ff6c30cc3591e5.zip
)
# For Windows: Prevent overriding the parent project's compiler/linker settings
set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(googletest)

add_executable(
  demo_shoot_projectile
  src/demo/shoot_projectile.cpp
  src/util/tuple.cpp
  src/util/vector.cpp
  src/util/point.cpp
  src/sim/environment.cpp
  src/sim/projectile.cpp
)
add_executable(
  demo_draw_projectile
  src/demo/draw_projectile.cpp
  src/util/tuple.cpp
  src/util/vector.cpp
  src/util/point.cpp
  src/util/color.cpp
  src/sim/environment.cpp
  src/sim/projectile.cpp
  src/drawing/canvas.cpp
)
add_executable(
  demo_draw_faces
  src/demo/hand_faces.cpp
  src/util/tuple.cpp
  src/util/point.cpp
  src/util/matrix.cpp
  src/drawing/canvas.cpp
  src/util/color.cpp
)
add_executable(
  demo_draw_sphere_silhouette
  src/demo/draw_sphere_silhouette.cpp
  src/util/tuple.cpp
  src/util/vector.cpp
  src/util/sphere.cpp
  src/util/matrix.cpp
  src/util/point.cpp
  src/physics/ray.cpp
  src/physics/intersection.cpp
  src/physics/intersections.cpp
  src/util/color.cpp
  src/drawing/canvas.cpp
)
add_executable(
  util_tuple_test
  src/util/tuple_test.cpp
  src/util/tuple.cpp
  src/util/vector.cpp
  src/util/point.cpp
)
target_link_libraries(
  util_tuple_test
  gtest_main
)
add_executable(
  util_color_test
  src/util/color_test.cpp
  src/util/color.cpp
)
target_link_libraries(
  util_color_test
  gtest_main
)
add_executable(
  drawing_canvas_test
  src/drawing/canvas_test.cpp
  src/drawing/canvas.cpp
  src/util/color.cpp
)
target_link_libraries(
  drawing_canvas_test
  gtest_main
)
add_executable(
  util_matrix_test
  src/util/matrix_test.cpp
  src/util/matrix.cpp
  src/util/tuple.cpp
  src/util/point.cpp
  src/util/vector.cpp
)
target_link_libraries(
  util_matrix_test
  gtest_main
)
add_executable(
  physics_ray_test
  src/physics/ray_test.cpp
  src/util/vector.cpp
  src/util/tuple.cpp
  src/util/point.cpp
  src/util/sphere.cpp
  src/util/matrix.cpp
  src/physics/ray.cpp
  src/physics/intersection.cpp
  src/physics/intersections.cpp
)
target_link_libraries(
  physics_ray_test
  gtest_main
)
add_executable(
  sphere_test
  src/util/sphere_test.cpp
  src/util/sphere.cpp
  src/util/matrix.cpp
  src/util/tuple.cpp
  src/util/point.cpp
  src/util/vector.cpp
  src/physics/material.cpp
  src/util/color.cpp
)
target_link_libraries(
  sphere_test
  gtest_main
)
add_executable(
  vector_test
  src/util/vector_test.cpp
  src/util/vector.cpp
  src/util/tuple.cpp
)
target_link_libraries(
  vector_test
  gtest_main
)
add_executable(
  point_list_test
  src/physics/point_light_test.cpp
  src/physics/point_light.cpp
  src/util/tuple.cpp
  src/util/point.cpp
  src/util/vector.cpp
  src/util/color.cpp
)
target_link_libraries(
  point_list_test
  gtest_main
)
add_executable(
  material_test
  src/physics/material_test.cpp
  src/util/color.cpp 
  src/physics/material.cpp
)
target_link_libraries(
  material_test
  gtest_main
)

include(GoogleTest)
gtest_discover_tests(util_tuple_test)
gtest_discover_tests(drawing_canvas_test)
gtest_discover_tests(util_matrix_test)
gtest_discover_tests(physics_ray_test)
gtest_discover_tests(sphere_test)
gtest_discover_tests(vector_test)
gtest_discover_tests(point_list_test)
gtest_discover_tests(material_test)
